--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #display-none {
+        display: none;
+      }
+    </style>
+  </head>
   <body>
     <div id="display-none">Hidden</div>
 
-    <script></script>
+    <script>
+      const displayNone = document.getElementById("display-none");
+      console.log(displayNone);
+    </script>
   </body>
 </html>
