--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -12,7 +12,7 @@
 
     <script>
       const displayNone = document.getElementById("display-none");
-      console.log(displayNone);
+      console.log("offsetParent of a hidden elem", displayNone.offsetParent);
     </script>
   </body>
 </html>
