--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -12,6 +12,7 @@
 
     <script>
       const displayNone = document.getElementById("display-none");
+      const notInTheDocument = document.createElement("div");
 
       console.log("offsetParent of a hidden elem", displayNone.offsetParent);
     </script>
