--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -15,6 +15,10 @@
       const notInTheDocument = document.createElement("div");
 
       console.log("offsetParent of a hidden elem", displayNone.offsetParent);
+      console.log(
+        "offsetParent of element is not in the document",
+        notInTheDocument.offsetParent
+      );
     </script>
   </body>
 </html>
