--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -14,11 +14,15 @@
       const displayNone = document.getElementById("display-none");
       const notInTheDocument = document.createElement("div");
 
+      const body = document.body;
+
       console.log("offsetParent of a hidden elem", displayNone.offsetParent);
       console.log(
         "offsetParent of element is not in the document",
         notInTheDocument.offsetParent
       );
+
+      console.log("offsetParent of body", body.offsetParent);
     </script>
   </body>
 </html>
