--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -15,6 +15,7 @@
       const notInTheDocument = document.createElement("div");
 
       const body = document.body;
+      const html = document.documentElement;
 
       console.log("offsetParent of a hidden elem", displayNone.offsetParent);
       console.log(
@@ -23,6 +24,7 @@
       );
 
       console.log("offsetParent of body", body.offsetParent);
+      console.log("offsetParent of html", html.offsetParent);
     </script>
   </body>
 </html>
