--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -5,10 +5,16 @@
       #display-none {
         display: none;
       }
+      #chat {
+        position: fixed;
+        top: 50px;
+        left: 50px;
+      }
     </style>
   </head>
   <body>
     <div id="display-none">Hidden</div>
+    <div id="chat">Chat</div>
 
     <script>
       const displayNone = document.getElementById("display-none");
