--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-parent-offset-left-offset-top/offset-parent-null.html
@@ -34,7 +34,7 @@
       console.log("offsetParent of body", body.offsetParent);
       console.log("offsetParent of html", html.offsetParent);
       console.log(
-        "offsetParent of element with position:fixed",
+        "offsetParent of element with position:fixed (only in chrome)",
         chat.offsetParent
       );
     </script>
