--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #main {
+        position: relative;
+        top: 50px;
+        left: 50px;
+        border: 10px solid black;
+        width: 400px;
+        height: 300px;
+      }
+    </style>
+  </head>
   <body>
+    <div id="main"></div>
     <script src="index.js"></script>
   </body>
 </html>
