--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
@@ -10,10 +10,15 @@
         width: 400px;
         height: 300px;
       }
+      #example {
+        border: 25px solid #e8c48f;
+      }
     </style>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">
+      <div id="example"></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
