--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
@@ -12,6 +12,11 @@
       }
       #example {
         border: 25px solid #e8c48f;
+        width: 300px;
+        height: 200px;
+        position: absolute;
+        top: 30px;
+        left: 25px;
       }
     </style>
   </head>
