--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/offset-width-and-offset-height/index.html
@@ -12,17 +12,39 @@
       }
       #example {
         border: 25px solid #e8c48f;
-        width: 300px;
-        height: 200px;
+        padding: 20px;
+        width: 250px;
+        height: 150px;
         position: absolute;
         top: 30px;
         left: 25px;
+        overflow: auto;
       }
     </style>
   </head>
   <body>
     <div id="main">
-      <div id="example"></div>
+      <div id="example">
+        <h3>Lorem ipsum dolor sit</h3>
+        <p>
+          amet consectetur adipisicing elit. Veniam rem consectetur et
+          necessitatibus voluptates ab, aliquam, odio omnis earum quaerat
+          doloremque deleniti dolor libero sapiente exercitationem error
+          eveniet, dignissimos vel?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam rem
+          consectetur et necessitatibus voluptates ab, aliquam, odio omnis earum
+          quaerat doloremque deleniti dolor libero sapiente exercitationem error
+          eveniet, dignissimos vel?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam rem
+          consectetur et necessitatibus voluptates ab, aliquam, odio omnis earum
+          quaerat doloremque deleniti dolor libero sapiente exercitationem error
+          eveniet, dignissimos vel?
+        </p>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
