--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -3,6 +3,10 @@
   <head>
     <style>
       #main {
+        position: relative;
+        top: 50px;
+        left: 50px;
+        border: 10px solid black;
       }
     </style>
   </head>
