--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -10,6 +10,13 @@
         width: 400px;
         height: 300px;
       }
+      #example {
+        position: absolute;
+        top: 30px;
+        left: 25px;
+        width: 300px;
+        border: 25px solid #e8c48f;
+      }
     </style>
   </head>
   <body>
