--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -15,6 +15,7 @@
         top: 30px;
         left: 25px;
         width: 300px;
+        height: 200px;
         border: 25px solid #e8c48f;
       }
     </style>
