--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -24,5 +24,9 @@
     <div id="main">
       <div id="example"></div>
     </div>
+    <script>
+      const example = document.getElementById("example");
+      console.log("clientTop", example.clientTop);
+    </script>
   </body>
 </html>
