--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -27,6 +27,7 @@
     <script>
       const example = document.getElementById("example");
       console.log("clientTop", example.clientTop);
+      console.log("clientLeft", example.clientLeft);
     </script>
   </body>
 </html>
