--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-top-and-client-left/index.html
@@ -29,5 +29,7 @@
       console.log("clientTop", example.clientTop);
       console.log("clientLeft", example.clientLeft);
     </script>
+
+    <script src="index.js"></script>
   </body>
 </html>
