--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <body></body>
+  <body>
+    <div id="main">
+      <div id="example"></div>
+    </div>
+  </body>
 </html>
