--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #main {
+        position: relative;
+        top: 50px;
+        left: 50px;
+      }
+    </style>
+  </head>
   <body>
     <div id="main">
       <div id="example"></div>
