--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -4,6 +4,9 @@
     <style>
       #main {
         position: relative;
+        border: 10px solid black;
+        width: 400px;
+        height: 300px;
         top: 50px;
         left: 50px;
       }
