--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -10,6 +10,14 @@
         top: 50px;
         left: 50px;
       }
+      #example {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        width: 300px;
+        height: 200px;
+        border: 25px solid #e8c48f;
+      }
     </style>
   </head>
   <body>
