--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -12,11 +12,12 @@
       }
       #example {
         position: absolute;
-        top: 25px;
-        left: 25px;
+        top: 6px;
+        left: 6px;
         width: 300px;
         height: 200px;
         border: 25px solid #e8c48f;
+        padding: 20px;
       }
     </style>
   </head>
@@ -24,5 +25,10 @@
     <div id="main">
       <div id="example"></div>
     </div>
+
+    <script>
+      const example = document.getElementById("example");
+      console.log(example.clientWidth);
+    </script>
   </body>
 </html>
