--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -28,7 +28,7 @@
 
     <script>
       const example = document.getElementById("example");
-      console.log(example.clientWidth);
+      console.log("clientWidth", example.clientWidth);
     </script>
   </body>
 </html>
