--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -61,7 +61,7 @@
 
     <script>
       const example = document.getElementById("example");
-      console.log("clientWidth", example.clientWidth);
+      console.log("clientWidth", example.clientWidth, 300 + 20 * 2 - 16);
     </script>
   </body>
 </html>
