--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/client-width-and-client-height/index.html
@@ -62,6 +62,7 @@
     <script>
       const example = document.getElementById("example");
       console.log("clientWidth", example.clientWidth, 300 + 20 * 2 - 16);
+      console.log("clientHeight", example.clientHeight, 200 + 2 * 20);
     </script>
   </body>
 </html>
