--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -12,6 +12,9 @@
       }
 
       #example {
+        width: 300px;
+        height: 200px;
+        border: 25px solid #e8c48f;
       }
     </style>
   </head>
