--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -15,6 +15,9 @@
         width: 300px;
         height: 200px;
         border: 25px solid #e8c48f;
+        position: absolute;
+        top: 20px;
+        left: 25px;
       }
     </style>
   </head>
