--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -16,9 +16,10 @@
         height: 200px;
         border: 25px solid #e8c48f;
         position: absolute;
-        top: 20px;
-        left: 25px;
+        top: 6px;
+        left: 6px;
         overflow: auto;
+        padding: 20px;
       }
     </style>
   </head>
