--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -62,7 +62,9 @@
 
     <script>
       const example = document.getElementById("example");
-      console.log(example);
+
+      console.log("scrollHeight", example.scrollHeight);
+      console.log("scrollWidth", example.scrollWidth);
     </script>
   </body>
 </html>
