--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -64,7 +64,7 @@
       const example = document.getElementById("example");
 
       console.log("scrollHeight", example.scrollHeight);
-      console.log("scrollWidth", example.scrollWidth);
+      console.log("scrollWidth", example.scrollWidth, 300 + 20 * 2 - 16);
     </script>
   </body>
 </html>
