--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -58,6 +58,9 @@
           2002.
         </p>
       </div>
+      <button id="button">
+        element.style.height = `${element.scrollHeight}px`
+      </button>
     </div>
 
     <script>
