--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -68,6 +68,8 @@
 
       console.log("scrollHeight", example.scrollHeight);
       console.log("scrollWidth", example.scrollWidth, 300 + 20 * 2 - 16);
+
+      const button = document.getElementById("button");
     </script>
   </body>
 </html>
