--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -21,6 +21,11 @@
         overflow: auto;
         padding: 20px;
       }
+
+      #button {
+        position: absolute;
+        bottom: 0;
+      }
     </style>
   </head>
   <body>
