--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -2,15 +2,6 @@
 <html>
   <head>
     <style>
-      #main {
-        position: relative;
-        top: 50px;
-        left: 50px;
-        border: 10px solid black;
-        width: 400px;
-        height: 300px;
-      }
-
       #example {
         width: 300px;
         height: 200px;
@@ -29,44 +20,42 @@
     </style>
   </head>
   <body>
-    <div id="main">
-      <div id="example">
-        <h3>Introduction</h3>
-        <p>
-          This Ecma Standard is based on several originating technologies, the
-          most well known being JavaScript (Netscape) and JScript (Microsoft).
-          The language was invented by Brendan Eich at Netscape and first
-          appeared in that company's Navigator 2.0 browser. It has appeared in
-          all subsequent browsers from Netscape and in all browsers from
-          Microsoft starting with Internet Explorer 3.0. The development of this
-          Standard started in November 1996. The first edition of this Ecma
-          Standard was adopted by the Ecma General Assembly of June 1997.
-        </p>
+    <div id="example">
+      <h3>Introduction</h3>
+      <p>
+        This Ecma Standard is based on several originating technologies, the
+        most well known being JavaScript (Netscape) and JScript (Microsoft). The
+        language was invented by Brendan Eich at Netscape and first appeared in
+        that company's Navigator 2.0 browser. It has appeared in all subsequent
+        browsers from Netscape and in all browsers from Microsoft starting with
+        Internet Explorer 3.0. The development of this Standard started in
+        November 1996. The first edition of this Ecma Standard was adopted by
+        the Ecma General Assembly of June 1997.
+      </p>
 
-        <p>
-          That Ecma Standard was submitted to ISO/IEC JTC 1 for adoption under
-          the fast-track procedure, and approved as international standard
-          ISO/IEC 16262, in April 1998. The Ecma General Assembly of June 1998
-          approved the second edition of ECMA-262 to keep it fully aligned with
-          ISO/IEC 16262. Changes between the first and the second edition are
-          editorial in nature.
-        </p>
+      <p>
+        That Ecma Standard was submitted to ISO/IEC JTC 1 for adoption under the
+        fast-track procedure, and approved as international standard ISO/IEC
+        16262, in April 1998. The Ecma General Assembly of June 1998 approved
+        the second edition of ECMA-262 to keep it fully aligned with ISO/IEC
+        16262. Changes between the first and the second edition are editorial in
+        nature.
+      </p>
 
-        <p>
-          The third edition of the Standard introduced powerful regular
-          expressions, better string handling, new control statements, try/catch
-          exception handling, tighter definition of errors, formatting for
-          numeric output and minor changes in anticipation of forthcoming
-          internationalisation facilities and future language growth. The third
-          edition of the ECMAScript standard was adopted by the Ecma General
-          Assembly of December 1999 and published as ISO/IEC 16262:2002 in June
-          2002.
-        </p>
-      </div>
-      <button id="button">
-        element.style.height = `${element.scrollHeight}px`
-      </button>
+      <p>
+        The third edition of the Standard introduced powerful regular
+        expressions, better string handling, new control statements, try/catch
+        exception handling, tighter definition of errors, formatting for numeric
+        output and minor changes in anticipation of forthcoming
+        internationalisation facilities and future language growth. The third
+        edition of the ECMAScript standard was adopted by the Ecma General
+        Assembly of December 1999 and published as ISO/IEC 16262:2002 in June
+        2002.
+      </p>
     </div>
+    <button id="button">
+      element.style.height = `${element.scrollHeight}px`
+    </button>
 
     <script>
       const example = document.getElementById("example");
@@ -75,6 +64,10 @@
       console.log("scrollWidth", example.scrollWidth, 300 + 20 * 2 - 16);
 
       const button = document.getElementById("button");
+      button.addEventListener("click", function () {
+        example.style.height = `${example.scrollHeight}px`;
+        main.style.height = `${example.scrollHeight}px`;
+      });
     </script>
   </body>
 </html>
