--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-width-and-scroll-height/index.html
@@ -6,15 +6,16 @@
         width: 300px;
         height: 200px;
         border: 25px solid #e8c48f;
-        position: absolute;
+        position: relative;
         top: 6px;
         left: 6px;
         overflow: auto;
       }
 
       #button {
-        position: absolute;
-        bottom: 0;
+        position: relative;
+        top: 6px;
+        left: 6px;
       }
     </style>
   </head>
