--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
@@ -3,6 +3,9 @@
   <head>
     <style>
       #main {
+        position: relative;
+        top: 50px;
+        left: 50px;
       }
 
       #example {
