--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
@@ -6,6 +6,7 @@
         position: relative;
         top: 50px;
         left: 50px;
+        border: 10px solid black;
       }
 
       #example {
