--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
@@ -7,6 +7,8 @@
         top: 50px;
         left: 50px;
         border: 10px solid black;
+        width: 400px;
+        height: 300px;
       }
 
       #example {
