--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/index.html
@@ -25,7 +25,10 @@
   </head>
   <body>
     <div id="main">
-      <div id="example">
+      <div
+        onscroll="showScrollTop()"
+        id="example"
+      >
         <h3>Introduction</h3>
         <p>
           This Ecma Standard is based on several originating technologies, the
