--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style></style>
+    <style>
+      #example {
+        width: 100px;
+        border: 1px solid black;
+        height: 100px;
+      }
+    </style>
   </head>
   <body>
-    <div id="example"></div>
+    <div id="example">
+      <div>Click me</div>
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+      <div>3</div>
+    </div>
   </body>
 </html>
