--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
@@ -12,28 +12,21 @@
   </head>
   <body>
     <div
-      onclick="scroll()"
+      onclick="scroll10pxDown()"
       id="example"
     >
-      <div>Click me</div>
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
-      <div>10</div>
-      <div>11</div>
-      <div>12</div>
-      <div>13</div>
-      <div>14</div>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sapiente
+      reiciendis! Debitis quibusdam omnis ea soluta optio. Pariatur nisi
+      doloribus explicabo quia placeat eum tenetur a quod delectus. Voluptates,
+      odit!
     </div>
 
     <script>
-      function scroll() {}
+      const example = document.getElementById("example");
+
+      function scroll10pxDown() {
+        example.scrollTop += 10;
+      }
     </script>
   </body>
 </html>
