--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
@@ -15,10 +15,23 @@
       onclick="scroll10pxDown()"
       id="example"
     >
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sapiente
-      reiciendis! Debitis quibusdam omnis ea soluta optio. Pariatur nisi
-      doloribus explicabo quia placeat eum tenetur a quod delectus. Voluptates,
-      odit!
+      <div>Click me</div>
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
+      <div>12</div>
+      <div>13</div>
+      <div>14</div>
+      <div>15</div>
+      <div>16</div>
     </div>
 
     <script>
