--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/scroll-left-and-scroll-top/scroll-top.html
@@ -33,12 +33,17 @@
       <div>15</div>
       <div>16</div>
     </div>
+    <button onclick="goToTop()">Go to Top</button>
 
     <script>
       const example = document.getElementById("example");
 
       function scroll10pxDown() {
         example.scrollTop += 10;
+      }
+
+      function goToTop() {
+        example.scrollTop = 0;
       }
     </script>
   </body>
