--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
@@ -6,4 +6,10 @@
       }
     </style>
   </head>
+  <body>
+    <div id="main">
+      <div id="example-1"></div>
+      <div id="example-2"></div>
+    </div>
+  </body>
 </html>
