--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
@@ -7,12 +7,21 @@
         top: 50px;
         left: 50px;
         border: 10px solid black;
+        width: 350px;
+        padding: 20px;
+      }
+
+      #example-1 {
+        position: relative;
+        width: 300px;
+        height: 200px;
+        border: 25px solid #e8c48f;
       }
     </style>
   </head>
   <body>
     <div id="main">
-      <div id="example-1"></div>
+      <div id="example-1">SDJBJ</div>
       <div id="example-2"></div>
     </div>
   </body>
