--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div id="main">
-      <div id="example-1">SDJBJ</div>
+      <div id="example-1"></div>
       <div id="example-2"></div>
     </div>
   </body>
