--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
@@ -7,7 +7,7 @@
         top: 50px;
         left: 50px;
         border: 10px solid black;
-        width: 350px;
+        width: 370px;
         padding: 20px;
       }
 
@@ -15,6 +15,7 @@
         position: relative;
         width: 300px;
         height: 200px;
+        padding: 10px;
         border: 25px solid #e8c48f;
       }
     </style>
