--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
@@ -18,6 +18,7 @@
         padding: 10px;
         border: 25px solid #e8c48f;
         box-sizing: border-box;
+        overflow: auto;
       }
     </style>
   </head>
