--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/do-not-take-width-height-from-css/index.html
@@ -68,7 +68,7 @@
 
       console.log(example1.clientWidth, styles.width);
       console.log(
-        "auto value",
+        "auto value::",
         getComputedStyle(document.getElementById("span")).width
       );
     </script>
