--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
@@ -10,9 +10,21 @@
         height: 300px;
         border: 10px solid black;
       }
+
+      #example {
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        width: 300px;
+        height: 200px;
+        border: 25px solid #e8c48f;
+        padding: 20px;
+      }
     </style>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">
+      <div id="example"></div>
+    </div>
   </body>
 </html>
