--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
@@ -25,7 +25,10 @@
   </head>
   <body>
     <div id="main">
-      <div id="example">
+      <div
+        id="example"
+        onscroll="showScrollBottom()"
+      >
         <h3>Introduction</h3>
         <p>
           This Ecma Standard is based on several originating technologies, the
