--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
@@ -62,5 +62,11 @@
         </p>
       </div>
     </div>
+
+    <script>
+      function showScrollBottom() {
+        console.log("ola");
+      }
+    </script>
   </body>
 </html>
