--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scroll-from-the-bottom.html
@@ -65,7 +65,11 @@
 
     <script>
       function showScrollBottom() {
-        console.log("ola");
+        const example = document.getElementById("example");
+        const scrollTop = example.scrollTop;
+        const scrollHeight = example.scrollHeight;
+
+        console.log(scrollHeight);
       }
     </script>
   </body>
