--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #main {
+        position: relative;
+        top: 50px;
+        left: 50px;
+        width: 400px;
+        height: 300px;
+        border: 10px solid black;
+      }
+    </style>
+  </head>
   <body>
     <div id="main">
       <div id="example"></div>
