--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -10,6 +10,9 @@
         height: 300px;
         border: 10px solid black;
       }
+
+      #example {
+      }
     </style>
   </head>
   <body>
