--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -59,5 +59,10 @@
         </p>
       </div>
     </div>
+
+    <script>
+      const example = document.getElementById("example");
+      console.log(example);
+    </script>
   </body>
 </html>
