--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -62,7 +62,12 @@
 
     <script>
       const example = document.getElementById("example");
-      console.log(example);
+      const scrollBarWidth =
+        example.offsetWidth - example.clientWidth - example.clientLeft * 2;
+
+      console.log("scrollbar width", scrollBarWidth);
+
+      console.log();
     </script>
   </body>
 </html>
