--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -66,8 +66,8 @@
         example.offsetWidth - example.clientWidth - example.clientLeft * 2;
 
       console.log("scrollbar width", scrollBarWidth);
-
-      console.log();
     </script>
+
+    <script></script>
   </body>
 </html>
