--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -68,6 +68,8 @@
       console.log("scrollbar width", scrollBarWidth);
     </script>
 
-    <script></script>
+    <script>
+      function showScrollBarWidth(elem) {}
+    </script>
   </body>
 </html>
