--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -69,7 +69,14 @@
     </script>
 
     <script>
-      function showScrollBarWidth(elem) {}
+      function showScrollBarWidth() {
+        // create a div with the scroll
+        const div = document.createElement("div");
+
+        div.style.overflowY = "scroll";
+        div.style.width = "50px";
+        div.style.height = "50px";
+      }
     </script>
   </body>
 </html>
