--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -72,7 +72,9 @@
       function showScrollbarWidth() {
         // create a div with the scroll
         const div = document.createElement("div");
+        div.innerHTML = "ola";
 
+        div.style.backgroundColor = "pink";
         div.style.overflowY = "scroll";
         div.style.width = "50px";
         div.style.height = "50px";
@@ -82,6 +84,8 @@
         const scrollbarWidth = div.offsetWidth - div.clientWidth;
         console.log(scrollbarWidth);
       }
+
+      showScrollbarWidth();
     </script>
   </body>
 </html>
