--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -12,13 +12,13 @@
       }
 
       #example {
-        border: 25px solid #e8c48f;
+        /* border: 25px solid #e8c48f; */
         position: absolute;
         top: 6px;
         left: 6px;
         width: 300px;
         height: 200px;
-        padding: 20px;
+        /* padding: 20px; */
         overflow: auto;
       }
     </style>
