--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/what-is-the-scrollbar-width.html
@@ -81,6 +81,9 @@
         // must put it in the document, otherwise sizes will be 0
         document.body.append(div);
         const scrollbarWidth = div.offsetWidth - div.clientWidth;
+
+        div.remove();
+
         console.log(scrollbarWidth);
       }
 
