--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -5,8 +5,18 @@
       #field {
         width: 200px;
         border: 10px groove black;
+        background-color: #00ff00;
+        position: relative;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div id="field">
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+      . . . . . . . . . . . . . . . . . . . . . . . . . . .
+    </div>
+  </body>
 </html>
