--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -8,10 +8,18 @@
         background-color: #00ff00;
         position: relative;
       }
+
+      #ball {
+        position: absolute;
+      }
     </style>
   </head>
   <body>
     <div id="field">
+      <img
+        src="https://en.js.cx/clipart/ball.svg"
+        id="ball"
+      />
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
