--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -26,5 +26,13 @@
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
       . . . . . . . . . . . . . . . . . . . . . . . . . . .
     </div>
+
+    <script>
+      const field = document.getElementById("field");
+      const offsetWidth = field.offsetWidth;
+      const offsetHeight = field.offsetHeight;
+
+      console.log(offsetWidth, offsetHeight);
+    </script>
   </body>
 </html>
