--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -32,7 +32,10 @@
       const offsetWidth = field.offsetWidth;
       const offsetHeight = field.offsetHeight;
 
-      console.log(offsetWidth, offsetHeight);
+      const ball = document.getElementById("ball");
+      const ballOffsetWidth = ball.offsetWidth;
+      const ballOffsetHeight = ball.offsetHeight;
+      console.log(ballOffsetWidth, ballOffsetHeight);
     </script>
   </body>
 </html>
