--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -36,8 +36,10 @@
       const ballOffsetWidth = ball.offsetWidth;
       const ballOffsetHeight = ball.offsetHeight;
 
-      ball.style.top = fieldOffsetHeight / 2 - ballOffsetHeight / 2 - 10 + "px";
-      ball.style.left = fieldOffsetWidth / 2 - ballOffsetWidth / 2 - 10 + "px";
+      // ball.style.top = fieldOffsetHeight / 2 - ballOffsetHeight / 2 - 10 + "px";
+      // ball.style.left = fieldOffsetWidth / 2 - ballOffsetWidth / 2 - 10 + "px";
+
+      console.log(ball.offsetTop, ball.offsetLeft);
     </script>
   </body>
 </html>
