--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -39,6 +39,11 @@
       // ball.style.top = fieldOffsetHeight / 2 - ballOffsetHeight / 2 - 10 + "px";
       // ball.style.left = fieldOffsetWidth / 2 - ballOffsetWidth / 2 - 10 + "px";
 
+      ball.style.left =
+        Math.round(field.clientWidth / 2 - ball.offsetWidth / 2) + "px";
+      ball.style.top =
+        Math.round(field.clientHeight / 2 - ball.offsetHeight / 2) + "px";
+
       console.log(ball.offsetTop, ball.offsetLeft);
     </script>
   </body>
