--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -19,6 +19,8 @@
       <img
         src="https://en.js.cx/clipart/ball.svg"
         id="ball"
+        width="40"
+        height="40"
       />
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
       . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
