--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/place-the-ball-in-the-field-center.html
@@ -11,6 +11,9 @@
 
       #ball {
         position: absolute;
+        /* OR */
+        /* width: 40px;
+        height: 40px; */
       }
     </style>
   </head>
