--- a/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/the-difference-css-width-versus-client-width.html
+++ b/part-2-browser-document-events-interfaces/document/element-size-and-scrolling/tasks/the-difference-css-width-versus-client-width.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <!-- What’s the difference between getComputedStyle(elem).width and elem.clientWidth? -->
+    <!-- 
+      What’s the difference between getComputedStyle(elem).width and elem.clientWidth? 
+    -->
   </body>
 </html>
